--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,24 @@ services:
    - docker
 
 before_install: 
-
    - docker build -t nitinjain786/docker-react -f Dockerfile.dev .
 
 script:
-  
    - docker run nitinjain786/docker-react npm run test -- --coverage
+
+deploy:
+   provider: elasticbeanstalk
+   region: "us-east-1"
+   app: "docker-react"
+   env: "Dockerreact-env"
+   bucket_name: "elasticbeanstalk-us-east-1-773849495659"
+   bucket_path: "docker-react"
+   on:
+      branch: master
+   access_key_id: $AWS_ACCESS_KEY
+   secret_access_key:
+      secure: "$AWS_SECRET_KEY"
+ 
 
 
 
