--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
    - docker build -t nitinjain786/docker-react -f Dockerfile.dev .
 
 script:
-   - docker run nitinjain786/docker-react npm run test -- --coverage
+   - docker run nitinjain786/docker-react npm run ci_test -- --coverage
 
 deploy:
    provider: elasticbeanstalk
