--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ deploy:
    bucket_path: "docker-react"
    on:
       branch: master
-   aws_access_key_id: $AWS_ACCESS_KEY
-   aws_secret_access_key: "$AWS_SECRET_KEY"
+   access_key_id: $AWS_ACCESS_KEY
+   secret_access_key: $AWS_SECRET_KEY
    edge: true
    skip_cleanup: true
 
